# iefa_rag

./: .dockerignore  .gitignore  Dockerfile  api.py  cookies.txt  fly.toml  guideline.json  ingest.py  main.py  pyproject.toml  rag_chain.py
.github/workflows/: fly-deploy.yml
.old/: rag_chain.py
app/: build_retrievers.py  clients.py  config.py  ingest_pdfs.py  rag_chain.py  test_nvidia.py
app/ingestion/: pipeline.py
app/rag/: chain.py  memory_adapter.py  memory_supabase.py
app/retrievers/: bm25.py  fts.py  hybrid.py  rerankers.py  semantic.py
app/utils/: text.py
app/vectorstores/: supabase_retriever.py
config/: gemini.json
iefa_rag/: package.json  pnpm-lock.yaml  pnpm-workspace.yaml
iefa_rag/src/: generate.ts
src/: 1_ocr.py  3_db.py  4_embedding.py  6_rerank.py  7_graph.py  8_generator.py  9_query_service.py  chunking.py  ocr.py
