[project]
name = "iefa-rag"
version = "0.1.0"
description = "RAG do IEFA"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.119.1",
    "langchain>=0.3.27",
    "langchain-core>=0.3.51",
    "langchain-community>=0.3.31",
    "langchain-nvidia-ai-endpoints>=0.3.18",
    "postgrest>=0.15.0",
    "rank-bm25>=0.2.2",
    "supabase>=2.5.1",
    "pypdf>=6.1.2",
    "tiktoken>=0.12.0",
    "transformers>=4.57.1",
    "sentence-transformers>=5.1.1",
    "unidecode>=1.4.0",
]
